--- a/static/bonifico.css
+++ b/static/bonifico.css
@@ -7,7 +7,7 @@ body{
 	height: 100%;
 	margin: 0;
 	background: rgb(30,30,34);
-	background: linear-gradient(90deg, rgba(14,14,15,1) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
+	background: linear-gradient(90deg, rgb(14, 14, 15) 0%, rgb(17, 0, 31) 100%);	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	font-family: 'Raleway', sans-serif;
@@ -135,7 +135,7 @@ body{
 
 
 .button-bonifico{
-	background-color:rgba(97, 32, 0, 0.6);
+    background: rgba(19, 0, 24, 0.5);
 	color: white;
 	opacity: 0.8;
 	border-width: 0px;
@@ -151,5 +151,7 @@ body{
 }
 
 #alert{
+	font-size: smaller;
+	width: 240px;
 	color: red;
 }
