--- a/static/signup.css
+++ b/static/signup.css
@@ -7,7 +7,7 @@ body{
 	height: 100%;
 	margin: 0;
 	background: rgb(30,30,34);
-	background: linear-gradient(90deg, rgba(14,14,15,1) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
+	background: linear-gradient(90deg, rgb(14, 14, 15) 0%, rgb(17, 0, 31) 100%);	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	font-family: 'Raleway', sans-serif;
@@ -152,7 +152,7 @@ body{
 }
 
 .button-signup{
-	background-color:rgb(97, 32, 0, 0.6);
+    background: rgba(19, 0, 24, 0.5);
 	color: white;
 	opacity: 0.8;
 	border-width: 0px;
@@ -164,5 +164,4 @@ body{
 
 .button-signup:hover{
 	opacity: 1;
-	box-shadow: 0 0 1px wheat;
 }
