--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
     </nav>
     <div class="page">
         <span id="username"> {{ username }} </span>
-
+        <span id="iban">{{ saldo.conto.iban }}</span>        
         <div class="div-saldo-container">
             <div class="div-saldo-count">
                 <span id="text-saldo-disp"> Saldo disponibile:</span>
