--- a/static/home.css
+++ b/static/home.css
@@ -65,6 +65,12 @@ body{
 	margin-top: 20px;
 }
 
+#iban{
+	color: white;
+	margin-top: 20px;
+	font-size: small;
+}
+
 .div-saldo-container{
 	height: 160px;
 	width: 80%;
