risolto problema di massimo 10 query

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -40,11 +40,11 @@
             <span id="span-saldo-disponibile">- saldo disponibile: {{user.conto.saldo.saldo_disponibile}}€</span>
             
             <div class="div-buttons">
-                <form action="{{ user.id_user }}/invia_denaro" method="post">
+                <form action="/admin/invia_denaro/{{ user.id_user }}" method="post">
                     <button type="submit" id="btn-actions">Invia denaro</button>
                 </form>
 
-                <form action="{{ user.id_user }}/svuota_saldo" method="post">
+                <form action="/admin/invia_denaro{{ user.id_user }}" method="post">
                     <button type="submit" id="btn-actions">Svuota saldo</button>
                 </form>
 
