fixed all, everything working

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -44,7 +44,7 @@
                     <button type="submit" id="btn-actions">Invia denaro</button>
                 </form>
 
-                <form action="/admin/invia_denaro{{ user.id_user }}" method="post">
+                <form action="/admin/svuota_saldo/{{ user.id_user }}" method="post">
                     <button type="submit" id="btn-actions">Svuota saldo</button>
                 </form>
 
